--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="robots" content="noindex">
   <meta  name="viewport" content="width=device-width,initial-scale=1">
   <title>Title</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:400,500,900&display=swap&subset=cyrillic-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/style.min.css">
@@ -31,40 +32,42 @@
     </div>
   </header>
   <nav class="menu">
-    <button type="button" class="menu__btn"></button>
-    <ul class="menu__list">
-      <li class="menu__item">
-        <a href="#" class="menu__link">О компании</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Банковские гарантии</a>
-      </li>
-      <li class="menu__item menu__item--active">
-        <a href="#" class="menu__link">Финансирование бизнеса</a>
-        <ul class="menu__sublist">
-          <li class="menu__item"><a href="#">Тендерные займы</a></li>
-          <li class="menu__item"><a href="#">Контрактное кредитование</a></li>
-        </ul>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Открытие расчетных счетов</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Займы физическим лицам</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Лизинг</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Факторинг</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Страхование</a>
-      </li>
-      <li class="menu__item">
-        <a href="#" class="menu__link">Контакты</a>
-      </li>
-    </ul>
+    <div class="wrapper">
+      <button type="button" class="menu__btn"></button>
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="#" class="menu__link">О компании</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Банковские гарантии</a>
+        </li>
+        <li class="menu__item menu__item--active">
+          <a href="#" class="menu__link">Финансирование бизнеса</a>
+          <ul class="menu__sublist">
+            <li class="menu__subitem"><a href="#">Тендерные займы</a></li>
+            <li class="menu__subitem"><a href="#">Контрактное кредитование</a></li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Открытие расчетных счетов</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Займы физическим лицам</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Лизинг</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Факторинг</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Страхование</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Контакты</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   
   <main>
