--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
           <div class="swiper-slide promo__slide" style="background-image: url(img/images/slide-1.jpg)">
             <div class="wrapper promo__wrap">
               <p class="promo__title">Кредитование малого бизнеса</p>
-              <p class="promo__subtitle">Большие финансовые возможности для развития малого бизнеса</p>
+              <p class="promo__subtitle">Большие финансовые возможности<br>для развития малого бизнеса</p>
               <a href="#" class="btn btn--red promo__btn">Получить консультацию</a>
             </div>
           </div>
           <div class="swiper-slide promo__slide" style="background-image: url(img/images/slide-1.jpg)">
             <div class="wrapper promo__wrap">
-              <p class="promo__title"></p>
-              <p class="promo__subtitle"></p>
+              <p class="promo__title">ФИНАНСИРОВАНИЕ БИЗНЕСА</p>
+              <p class="promo__subtitle">Краткосрочное финансирование - быстрое решение текущих задач, пополнение оборотных средств, овердрафтное кредитование</p>
               <a href="#" class="btn btn--red promo__btn">Получить консультацию</a>
             </div>
           </div>
