--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section class="benefits">
       <div class="wrapper benefits__wrap">
         <div class="benefits__info">
-          <p class="title">Преимущества работы с нами</p>
+          <p class="title">Преимущества работы<br>с нами</p>
           <ul class="benefits__list">
             <li class="benefits__item">
               <p class="benefits__title">мобильность</p>
@@ -124,7 +124,7 @@
       <div class="wrapper">
         <p class="title title--center">О НАС</p>
         <p>Компания «Персона Групп» оказывает полный спектр консалтинговых и брокерских услуг по всем направлениям от организации кредитования для микро и малого бизнеса до структурирования сложнейших сделок по проектному и инвестиционному финансированию.</p>
-        <p>Мы имеем многолетний опыт в привлечении финансирования и всегда успешно справляемся с поставленными задачами.</p>
+        <p>Мы имеем многолетний опыт в привлечении финансирования и всегда успешно справляемся с поставленными задачами.</p>
         <a href="#" class="btn btn--white">Узнать больше</a>
       </div>
     </section>
