--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <section class="order">
       <div class="wrapper">
         <p class="title title--center">Запрос на бесплатную консультацию</p>
-        <p>Вы хотите узнать о возможности привлечения финансирования или выдачи банковской гарантии по телефону? Просто заполните свои данные и мы свяжемся с Вами в ближайшее время.</p>
+        <p class="order__subtitle">Вы хотите узнать о возможности привлечения финансирования или выдачи банковской гарантии по телефону? Просто заполните свои данные и мы свяжемся с Вами в ближайшее время.</p>
       </div>
       <div class="order__bg">
         <div class="wrapper">
@@ -160,20 +160,20 @@
     </section>
     
     <section class="brands">
-      <div class="wrapper">
+      <div class="wrapper brands__wrap">
         <div class="swiper-container brands__slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide brands__slide">
               <img src="img/images/b1.jpg" alt="Brands">
             </div>
             <div class="swiper-slide brands__slide">
-              <img src="img/images/b2.jpg" alt="Brands">
+              <img src="img/images/b2.png" alt="Brands">
             </div>
             <div class="swiper-slide brands__slide">
-              <img src="img/images/b3.jpg" alt="Brands">
+              <img src="img/images/b3.png" alt="Brands">
             </div>
             <div class="swiper-slide brands__slide">
-              <img src="img/images/b4.jpg" alt="Brands">
+              <img src="img/images/b4.png" alt="Brands">
             </div>
             <div class="swiper-slide brands__slide">
               <img src="img/images/b5.jpg" alt="Brands">
@@ -188,9 +188,9 @@
               <img src="img/images/b8.jpg" alt="Brands">
             </div>
           </div>
-          <div class="swiper-button-prev brands__prev"></div>
-          <div class="swiper-button-next brands__next"></div>
         </div>
+        <div class="swiper-button-prev brands__prev"></div>
+        <div class="swiper-button-next brands__next"></div>
       </div>
     </section>
   </main>
@@ -251,6 +251,8 @@
       },
       preventClicks: false,
       preventClicksPropagation: false,
+      slidesPerView: 'auto',
+      spaceBetween: 20,
     });
   </script>
 </body>
