--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
   <nav class="menu">
     <div class="wrapper">
-      <button type="button" class="menu__btn"></button>
+      <button type="button" class="menu__btn">Меню</button>
       <ul class="menu__list">
         <li class="menu__item">
           <a href="#" class="menu__link">О компании</a>
@@ -197,7 +197,7 @@
   
   <footer class="footer">
     <div class="wrapper footer__wrap">
-      <div class="footer__column">
+      <div class="footer__column footer__column--logo">
         <div class="logo">
           <img src="img/images/logo.png" alt="Logo">
         </div>
@@ -230,6 +230,7 @@
   </div>
   
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
 
