--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
       preventClicksPropagation: false,
       loop: true,
       effect: 'fade',
+      fadeEffect: {
+        crossFade: true
+      },
+      speed: 1500,
       autoplay: true,
       autoplay: {
         delay: 4000,
